--- a/.github/workflows/buil.yml
+++ b/.github/workflows/buil.yml
@@ -12,6 +12,9 @@ jobs:
         submodules: true
     - name: VcPkg
       uses: lukka/run-vcpkg@v11
+      with:
+        setupOnly: true
+        vcpkgGitCommitId: 5b1214315250939257ef5d62ecdcbca18cf4fb1c
     - name: Build
       run: cmake . -DCMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake
            cmake --build build --config Debug --target all 
