Removed target argument from build file.

--- a/.github/workflows/buil.yml
+++ b/.github/workflows/buil.yml
@@ -17,7 +17,7 @@ jobs:
         vcpkgGitCommitId: 5b1214315250939257ef5d62ecdcbca18cf4fb1c
     - name: Build
       run: cmake . -DCMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake
-           cmake --build build --config Debug --target all 
+           cmake --build build --config Debug
 
 
 
