--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,12 @@ jobs:
       with:
         setupOnly: true
         vcpkgGitCommitId: 5b1214315250939257ef5d62ecdcbca18cf4fb1c
+    - name: Install Prerequiements
+      run: |
+           echo Installing packages...
+           sudo apt-get install -y build-essential autoconf libtool
     - name: Build
       run: |
-           sudo apt-get install -y autoconf libtool
            cmake . -DCMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake
            cmake --build build --config Debug --target all 
 
