--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,8 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: build-logs-icu
-        path: /home/runner/work/HexSmw/HexSmw/vcpkg/buildtrees/icu/*.log
+        name: build-logs-qt
+        path: /home/runner/work/HexSmw/HexSmw/vcpkg/buildtrees/qtbase/*.log
 
 
 
