build in build directory.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,9 @@ jobs:
            sudo apt-get install -y libgl1-mesa-dev libxcb-xinerama0-dev libudev-dev libxkbcommon-dev libwayland-dev libegl1-mesa-dev libgles2-mesa-dev libglu1-mesa-dev
     - name: Build
       run: |
-           cmake . -DCMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake
-           mkdir build
-           cmake --build build --config Debug --target all 
+           mkdir build && cd build
+           cmake .. -DCMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake
+           cmake --build . --config Debug --target all 
     - name: Archive logs
       if: always()
       uses: actions/upload-artifact@v4
