--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Linux
 
 on: [push]
 
@@ -31,7 +31,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: build-logs-qt
-        path: /home/runner/work/HexSmw/HexSmw/vcpkg/buildtrees/qtbase/*.log
+        path: /home/runner/work/HexSmw/HexSmw/build/*
 
 
 
