--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
 
-project(QtTest VERSION 0.1.0 LANGUAGES C CXX)
+project(HexSmw VERSION 0.0.1 LANGUAGES C CXX)
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
 
 set (CMAKE_CXX_STANDARD 20)
