--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs: 
   build:
-    name: build
+    name: linux
     runs-on: [ubuntu-latest]
     steps:
     - uses: actions/checkout@v3
@@ -31,7 +31,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: build-logs-qt
-        path: /home/runner/work/HexSmw/HexSmw/build/*
+        path: /home/runner/work/HexSmw/HexSmw/build/HexSmw
 
 
 
