--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -9,17 +9,17 @@ jobs:
     env:
       VCPKG_ROOT: ${{ github.workspace }}/vcpkg
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         submodules: true
     - uses: lukka/get-cmake@latest
     - uses: ilammy/msvc-dev-cmd@v1
 
     - name: Cache vcpkg
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       id: cache-vcpkg
       with:
-        path: vcpkg/
+        path: ${{ github.workspace }}/vcpkg/
         key: vcpkg-x64-windows
 
     - name: Install Dependencies
@@ -35,10 +35,11 @@ jobs:
     - name: Build
       shell: cmd
       run: |
+           export VCPKG_ROOT=${{ github.workspace }}/vcpkg
            ${{ github.workspace }}/vcpkg/vcpkg update
            mkdir build
            cd build
-           cmake .. -DCMAKE_TOOLCHAIN_FILE="${{env.VCPKG_ROOT}}/scripts/buildsystems/vcpkg.cmake"
+           cmake .. -DCMAKE_TOOLCHAIN_FILE="${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake"
            cmake --build . --config Debug --target all 
       
 
@@ -47,4 +48,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: hexsmw-windows-binary
-        path: /home/runner/work/HexSmw/HexSmw/build/HexSmw.exe
+        path: /home/runner/work/HexSmw/HexSmw/build/*
