--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -39,7 +39,7 @@ jobs:
            ${{ github.workspace }}/vcpkg/vcpkg update
            mkdir build
            cd build
-           cmake .. -DCMAKE_TOOLCHAIN_FILE="${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake"
+           cmake .. -G "Visual Studio 17 2022" -A x64 -DCMAKE_TOOLCHAIN_FILE="${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake"
            cmake --build . --config Debug --target all 
       
 
@@ -48,4 +48,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: hexsmw-windows-binary
-        path: /home/runner/work/HexSmw/HexSmw/build/*
+        path: ${{ github.workspace }}/build/*
