changed cmake target to project name

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -40,7 +40,7 @@ jobs:
            mkdir build
            cd build
            cmake .. -G "Visual Studio 17 2022" -A x64 -DCMAKE_TOOLCHAIN_FILE="${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake"
-           cmake --build . --config Debug --target all 
+           cmake --build . --config Debug --target HexSmw 
       
 
     - name: Windows Binary Artifact
