Use codelldb-extention for debugging: Changed type from "cppdbg" to "lldb".

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,9 +3,9 @@
     "configurations": [
         {
             "name": "(lldb) Launch",
-            "type": "cppdbg",
+            "type": "lldb",
             "request": "launch",
-            "program": "enter program name, for example ${workspaceFolder}/a.out",
+            "program": "${workspaceFolder}/build/HexSmw",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
@@ -15,7 +15,7 @@
         },
         {
             "name": "(lldb) Launch",
-            "type": "cppdbg",
+            "type": "lldb",
             "request": "launch",
             "program": "enter program name, for example ${workspaceFolder}/a.out",
             "args": [],
@@ -26,6 +26,6 @@
             "MIMode": "lldb",
             "configSource": "workspaceFolder",
             "existing": true
-        }
+                }
     ]
 }
